// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App has a valid snapshot 1`] = `
<div
  className="App"
  id="top"
>
  <div
    className="SourceSelect"
  >
    <span
      className="SourceSelect-radio"
    >
      <input
        checked={true}
        onChange={[Function]}
        type="radio"
        value="HN"
      />
      HN
    </span>
    <span
      className="SourceSelect-radio"
    >
      <input
        checked={false}
        onChange={[Function]}
        type="radio"
        value="Reddit"
      />
      Reddit
    </span>
  </div>
  <form
    className="Search"
    onSubmit={[Function]}
  >
    <input
      onChange={[Function]}
      onFocus={[Function]}
      type="text"
      value="react"
    />
    <button
      className="Button clickable"
      type="submit"
    >
      Search
    </button>
  </form>
  <div
    className="ResultTable"
  >
    <div
      className="Table"
    >
      <div
        className="TableHeaderRow"
      >
        <span
          className="TableHeader"
          style={
            Object {
              "width": "60%",
            }
          }
        >
          <button
            className="Button inline"
            onClick={[Function]}
          >
            Title
             
          </button>
        </span>
        <span
          className="TableHeader"
          style={
            Object {
              "width": "30%",
            }
          }
        >
          <button
            className="Button inline"
            onClick={[Function]}
          >
            Date
             
          </button>
        </span>
        <span
          className="TableHeader"
          style={
            Object {
              "width": "10%",
            }
          }
        >
          <button
            className="Button inline"
            onClick={[Function]}
          >
            Comments
             
          </button>
        </span>
        <span
          className="TableHeader"
          style={
            Object {
              "width": "10%",
            }
          }
        >
          <button
            className="Button inline"
            onClick={[Function]}
          >
            Points
             
          </button>
        </span>
        <span
          className="Header"
          style={
            Object {
              "width": "10%",
            }
          }
        >
          <i
            className="fa fa-trash"
          />
        </span>
      </div>
    </div>
    <div
      className="Footer"
    >
      <i
        className="fa fa-spinner fa-spin fa-3x"
      />
      <a
        className="backtotop"
        href="#top"
      >
        <button
          className="Button clickable"
        >
          Back to top
        </button>
      </a>
    </div>
  </div>
</div>
`;

exports[`Button has a valid snapshot 1`] = `
<button>
  Button
</button>
`;

exports[`ResultTable has a valid snapshot 1`] = `
<div
  className="ResultTable"
>
  <div
    className="Table"
  >
    <div
      className="TableHeaderRow"
    >
      <span
        className="TableHeader"
        style={
          Object {
            "width": "60%",
          }
        }
      >
        <button
          className="Button inline"
          onClick={[Function]}
        >
          Title
           
        </button>
      </span>
      <span
        className="TableHeader"
        style={
          Object {
            "width": "30%",
          }
        }
      >
        <button
          className="Button inline"
          onClick={[Function]}
        >
          Date
           
        </button>
      </span>
      <span
        className="TableHeader"
        style={
          Object {
            "width": "10%",
          }
        }
      >
        <button
          className="Button inline"
          onClick={[Function]}
        >
          Comments
           
        </button>
      </span>
      <span
        className="TableHeader"
        style={
          Object {
            "width": "10%",
          }
        }
      >
        <button
          className="Button inline"
          onClick={[Function]}
        >
          Points
           
        </button>
      </span>
      <span
        className="Header"
        style={
          Object {
            "width": "10%",
          }
        }
      >
        <i
          className="fa fa-trash"
        />
      </span>
    </div>
  </div>
  <div
    className="Footer"
  >
    <i
      className="fa fa-spinner fa-spin fa-3x"
    />
    <a
      className="backtotop"
      href="#top"
    >
      <button
        className="Button clickable"
      >
        Back to top
      </button>
    </a>
  </div>
</div>
`;

exports[`Search has a valid snapshot 1`] = `
<form
  className="Search"
>
  <input
    type="text"
  />
  <button
    className="Button clickable"
    type="submit"
  >
    Search
  </button>
</form>
`;
